Prevents text from overflowing after window size change

--- a/recievescan/css/receiver.css
+++ b/recievescan/css/receiver.css
@@ -6,7 +6,7 @@
 }
 
 .row {
-  font-size: 8vh;
+  font-size: calc(min(9vh, 3.5vw));
   color: white;
 }
 
@@ -28,13 +28,16 @@
   background-color: #000000;
   font-family: nnhsFont;
   transition: background-color 1s ease;
+  border-radius: 5vw;
 }
 
 #barcodeInput {
   width: 100%;
   height: 100%;
   background: transparent;
-  border: 1vw solid black;
+  border: 0.75vw transparent;
+  border-style: solid;
+  border-radius: 5vw;
   color: transparent;
   outline: none;
   box-sizing: border-box;
@@ -45,7 +48,7 @@
 }
 
 #barcodeInput:focus {
-  border-color: blue;
+  border-color: rgb(132, 132, 245);
 }
 
 #buttons {
@@ -54,6 +57,7 @@
   width: 30vw;
   height: 70vh;
   background-color: #d1b6b6;
+  border-radius: 5vw;
   font-family: nnhsFont;
   align-items: center;
   justify-content: space-evenly;
@@ -64,7 +68,7 @@
   height: 15vh;
   width: 20vw;
   color: white;
-  font-size: 8vh;
+  font-size: calc(min(8vh, 4vw));
   border: 5px solid #fff;
   border-radius: 5px;
   font-family: nnhsFont;
